<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="map_type_hybrid">Hybrid</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type_terrian">Terrian</string>
    <string name="map_type_normal">Normal</string>
    <string name="contacts">Contacts</string>
    <string name="messages">Messages</string>

    <string name="search_hint">Search</string>

    <string name="send_a_message">Send a message</string>
    <string name="add_to_friends">Add to friends</string>

    <string name="refresh_contacts">Refresh contacts list</string>



    <string name="done">Done</string>
    <string name="app_name" translatable="false">Group Tracker</string>
    <string name="title_activity_maps">Map</string>
    <!--<string name="title_activity_main">Share Location</string>-->

    <string name="shareLocation">Share Location</string>
    <string name="provider_gps">GPS</string>
    <string name="provider_network">Network</string>
    <string name="location_settings">Location Settings</string>


    <string name="nick_name">User Name</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="authorization">Authorization</string>
    <string name="sing_up">Sing up</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="hint_nick_name">User Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>

    <string name="speed">Speed</string>
    <string name="km_per_hour">km/h</string>
    <string name="main_tab">Main</string>
    <string name="map">Map</string>
    <string name="text_tab3">This is the third tab</string>
    <string name="action_settings">Settings</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hint_email">Email</string>
    <string name="edit">Edit</string>
    <string name="full_name">Full name</string>
    <string name="action_log_out">Log out</string>
</resources>