<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    tools:context="location.share.com.aleksandr.aleksandrov.sharelocation.authorization.LogInFragment">

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="250dp">

        <android.support.design.widget.TextInputLayout
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/input_layout_nick_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_input_nick_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_nick_name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_password" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/login_button"
            android:text="@string/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <!--<Button-->
            <!--android:id="@+id/sing_up_button"-->
            <!--android:text="@string/create_a_new_account"-->
            <!--android:layout_marginBottom="20dp"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:onClick="onClickCreateNewAccount"/>-->


    </LinearLayout>

</RelativeLayout>